z-index corrections, including in default.css override

--- a/sites/all/themes/pul_development_theme/css/global.css
+++ b/sites/all/themes/pul_development_theme/css/global.css
@@ -2989,11 +2989,15 @@ ul.nice-menu.nice-menu-menu-collection-development-webs ul {
 */
 
 .context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
-	z-index: 1000;
+	z-index: 1333;
 }
 
 .context-collections-and-collection-development #section-header, .context-collections #section-header {
-	z-index: 1001;
+	z-index: 1666;
+}
+
+.context-collections-and-collection-development #section-content, .context-collections #section-content {
+	z-index: 1111;
 }
 
 ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a {
@@ -3017,7 +3021,7 @@ ul.nice-menu.nice-menu-menu-collection-development-webs .menuparent a:hover {
 }
 
 .context-collections-and-collection-development #block-system-main-menu, .context-collections #block-system-main-menu {
-	z-index: 9999;
+	z-index: 1222;
 }
 
 .context-collections-and-collection-development .panel-pane.panel-pane.pane-block.pane-nice-menus-2 {
